--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "2",
+    "@mdi/font": "^7.0.96",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-plus": "^2.2.22",
+    "jquery": "^3.6.1",
+    "survey-core": "^1.9.58",
+    "survey-vue": "^1.9.58",
+    "survey-vue-ui": "^1.9.58",
+    "vue": "3",
+    "vue-router": "^4.0.13",
+    "vue-timer-hook": "^1.0.33",
+    "vuetify": "3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +27,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.7.0"
   },
   "eslintConfig": {
     "root": true,
